@@ -1,4 +1,4 @@
 @set UPDATED 6 February 2013
 @set UPDATED-MONTH February 2013
-@set EDITION 3.0.12-rc2
-@set VERSION 3.0.12-rc2
+@set EDITION 3.0.12-rc3
+@set VERSION 3.0.12-rc3
